@@ -1,3 +1,10 @@
+2008-10-03  Ariya Hidayat  <ariya.hidayat@trolltech.com>
+
+        Build fix.
+
+        * platform/qt/WidgetQt.cpp:
+        (WebCore::Widget::invalidateRect):
+
 2008-10-03  Alp Toker  <alp@nuanti.com>
 
         Remove some left-over GTK+ includes. No change in functionality.
